Fixed some spacing, added social buttons in contact section

--- a/css/main.css
+++ b/css/main.css
@@ -276,20 +276,18 @@ label {
   object-position: 0px -19px;
   overflow: hidden; }
 
-.contactButton button {
-  width: 50px;
-  height: 50px; }
-
 .contactButton img {
   object-fit: fill;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 30px;
+  height: 30px; }
+
+.contactButton li {
+  padding-right: 63px; }
 
 /* CSS code for the Footer section. */
 .footer {
   color: #47569A; }
-
-body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
 
 hr {
   max-width: 50px;
@@ -353,6 +351,7 @@ header.masthead {
   padding-bottom: calc(10rem - 56px);
   background-image: url("../assets/img/ransfordCarnie.jpg");
   background-position: center center;
+  width: 100vw;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
