--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,8 +1,4 @@
 // Global styling for this template
-body {
-  @include serif-font;
-}
-
 hr {
   max-width: 50px;
   border-width: 3px;
